kubernetes-deploy/02-phpmyfaq-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: phpmyfaq
  name: phpmyfaq
  namespace: phpmyfaq
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
  - name: https
    port: 443
    protocol: TCP
  selector:
    app: phpmyfaq
  sessionAffinity: None
  type: ClusterIP
---
