kubernetes-deploy/03-phpmyfaq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyfaq
  namespace: phpmyfaq
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer # provided by cert-manager install/config
    cert-manager.io/common-name: faq.sample.domain
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - faq.sample.domain
      secretName: faq-tls-<ENV_ROLE>
  rules:
  - host: faq.sample.domain
    http:
      paths:
      - backend:
          service:
            name: phpmyfaq
            port:
              number: 443
        path: /
        pathType: Prefix
---
